fixed spacing on header

--- a/src/Page.css
+++ b/src/Page.css
@@ -22,9 +22,10 @@
 }
 
 .staticHeader{
-    background: #070000;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #070000, #4C0001, #070000);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #070000, #4C0001, #070000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #070000;  
+    background: -webkit-linear-gradient(to right, #070000, #4C0001, #070000);  
+    background: linear-gradient(to right, #070000, #4C0001, #070000); 
+    
     min-height: 1000px;    
     margin-top: -30px;
 }
@@ -34,4 +35,14 @@
     padding-top: 60%;
     font-size: 30px;
     text-align: center;
+}
+@media only screen and (min-width: 769px){
+    .staticHeader .text{
+        color:white;
+        padding: 20%;
+        /* padding-top: 60%; */
+        font-size: 30px;
+        text-align: center;
+        /* background: black; */
+    }
 }
